--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^24.6.0",
     "jest": "^24.6.0",
     "metro-react-native-babel-preset": "^0.53.1",
+    "react-native-gesture-handler": "^1.1.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
