- Done functionality - Add app icon and splash screen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,5 +33,7 @@ target 'InvestmentCalculator' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
 end
 
