--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.3",
     "react-native": "0.59.3",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.6.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
